--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,47 @@
+body{
+    margin: 0;
+    padding: 0;
+    background-color: #EEE2DC;
+}
 
+h1, h2, h3, h4, span, p, a{
+    font-family: 'Roboto', sans-serif;
+    color: #AC3B61;
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    text-decoration: none;
+}
+
+input{
+    padding-left: 10px;
+    font-family: 'Roboto', sans-serif;
+}
+
+input:focus {
+    outline: none;
+}
+
+input::placeholder{
+    font-family: 'Roboto', sans-serif;
+}
+
+button{
+    font-family: 'Roboto', sans-serif;
+    border: none;
+    background-color: #123C69;
+    color: white;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+button:hover{
+    transform: translateY(-5px);
+}
+
+.App{
+    display: flex;
+    justify-content: center;
+}
